[gd_scene load_steps=14 format=3 uid="uid://dfc4qk6t8nfbo"]

[ext_resource type="Script" path="res://ui/title.gd" id="1_4hio6"]
[ext_resource type="FontFile" uid="uid://1mt6tq6qrv1k" path="res://assets/Kenney Thick.ttf" id="3_175md"]
[ext_resource type="AudioStream" uid="uid://34ier75hsy1u" path="res://assets/audio/eerie-prelude-23078.ogg" id="4_7hwli"]
[ext_resource type="PackedScene" uid="uid://vea3dq41ewm6" path="res://levels/background.tscn" id="4_yw284"]
[ext_resource type="PackedScene" uid="uid://pr4dc0k8fu4b" path="res://scale.tscn" id="5_cpdym"]
[ext_resource type="Theme" uid="uid://csrxccdqow62n" path="res://ui/menu.tres" id="6_gt5hj"]

[sub_resource type="LabelSettings" id="LabelSettings_wjyqb"]
font = ExtResource("3_175md")
font_size = 72
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j5j8c"]
font = ExtResource("3_175md")
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_dw3jk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control2/Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(216, -118)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control2/Message:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Score:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/SurvivalTimeUpdate:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control3/Exit:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/Controls:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/Controls2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_47m24"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control2/Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-445.5, -120), Vector2(-445.5, 350)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control2/Message:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Score:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/SurvivalTimeUpdate:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control3/Exit:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/Controls:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/Controls2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8euf7"]
_data = {
"RESET": SubResource("Animation_dw3jk"),
"intro": SubResource("Animation_47m24")
}

[sub_resource type="LabelSettings" id="LabelSettings_mgshm"]
font = ExtResource("3_175md")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_qejvs"]
font = ExtResource("3_175md")
font_size = 30

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hio6")

[node name="Background" parent="." instance=ExtResource("4_yw284")]
position = Vector2(-89, -490)
scale = Vector2(2, 2)

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -465.5
offset_top = 330.0
offset_right = 425.5
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
text = "Endless Blade"
label_settings = SubResource("LabelSettings_wjyqb")
horizontal_alignment = 1

[node name="Message" type="Label" parent="Control2"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -437.0
offset_top = 605.0
offset_right = 397.0
offset_bottom = 680.0
grow_horizontal = 2
grow_vertical = 0
text = "Press Space to play"
label_settings = SubResource("LabelSettings_j5j8c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8euf7")
}
autoplay = "intro"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7hwli")
volume_db = 5.0
autoplay = true

[node name="Scale" parent="." instance=ExtResource("5_cpdym")]

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 1019.0
offset_bottom = 250.0

[node name="Score" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 474.0
offset_bottom = 62.0
text = "Highest Score - 0"
label_settings = SubResource("LabelSettings_mgshm")

[node name="SurvivalTimeUpdate" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 863.0
offset_bottom = 121.0
text = "Highest Survived Time - 00:00.00"
label_settings = SubResource("LabelSettings_qejvs")
horizontal_alignment = 2

[node name="Controls" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 922.0
offset_bottom = 181.0
text = "AWD/Arrows    Space/LeftCLick    ESC"
label_settings = SubResource("LabelSettings_qejvs")
horizontal_alignment = 2

[node name="Controls2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 45.0
offset_top = 183.0
offset_right = 998.0
offset_bottom = 224.0
text = "Movement             Attack          Menu/Shop"
label_settings = SubResource("LabelSettings_qejvs")
horizontal_alignment = 2

[node name="Control3" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Exit" type="Button" parent="Control3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.052
offset_left = -148.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 62.0
theme = ExtResource("6_gt5hj")
text = "Exit"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Control3/Exit" to="." method="_on_exit_pressed"]
